--- a/Netflix-Application/src/main/resources/application.properties
+++ b/Netflix-Application/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/NetflixApplication?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
 
